accordion starting to expand/collapse correctly

--- a/src/components/msgsetup/msgsetup.scss
+++ b/src/components/msgsetup/msgsetup.scss
@@ -40,3 +40,7 @@ msgsetup {
   grid-column: 1 / span 2;
   grid-row: 2;
 }
+
+button {
+    align-items: baseline;
+}
